# DV1478

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TestBinary
doc/: diary_week_14.md  diary_week_15.md  diary_week_16.md  diary_week_17.md  diary_week_18.md  diary_week_19.md  diary_week_20.md  diary_week_21.md  diary_week_24.md  diary_week_25.md  roadmap.md
lib/: CMakeLists.txt
lib/falk/: CMakeLists.txt
lib/falk/include/: RNG.hpp  defs.hpp
src/: Voronoi.hpp  _OLD_main.cpp  falk.hpp  main.cpp
